--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"next": "canary",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"sharp": "^0.33.1"
+		"sharp": "^0.33.2",
+		"plaiceholder": "3.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "20.4.5",
